A couple of fixes to the commenting function. Can't reply to deleted comments, allow pre-formatted whitespace in the comment body, remove add comment link from form header when the record is not commentable.

--- a/trunk/src/main/css/bdrs/bdrs.css
+++ b/trunk/src/main/css/bdrs/bdrs.css
@@ -1885,6 +1885,7 @@ div.blockUI.blockMsg.blockPage h1 {
 
 .comments .userName {
     font-weight: bold;
+    font-size: 1.2em;
 }
 
 .comments addCommentForm {
@@ -1898,6 +1899,10 @@ div.blockUI.blockMsg.blockPage h1 {
 
 .comments .warning {
     padding-left: 1em;
+}
+
+.comments .commentBody {
+    white-space: pre;
 }
 
 .jcollapsible {
